# llm_proxy

./: .gitignore  LICENSE  Makefile  README.MD  go.mod  go.sum  main.go
.github/workflows/: go.yml
addons/: cache.go  interface.go  megadumper.go  megadumper_test.go  responseCache.go  responseCache_test.go  scheme_upgrader.go  scheme_upgrader_test.go  stdoutlogger.go  stdoutlogger_test.go
cmd/: apiAuditor.go  cache.go  config.go  config_test.go  dir_logger.go  root.go  simple.go  version.go
config/: appMode.go  cacheBehavior.go  cacheConfig.go  cacheConfig_test.go  cacheStorageConfig.go  cacheStorageConfig_test.go  config.go  config_test.go  headersToFilter.go  http.go  logSourceConfig.go  logSourceConfig_test.go  mode.go  terminalLogger.go  terminalLogger_test.go  trafficLogger.go
examples/python/: pyproject.toml
examples/python/simple/: simple.py
fileUtils/: createNewFileFromFilename.go  createNewFileFromFilename_test.go  createUniqueFileName.go  createUniqueFileName_test.go  dirExistsOrCreate.go  dirExistsOrCreate_test.go  fileExists.go  fileExists_test.go  relocateExistingFileIfExists.go  relocateExistingFileIfExists_test.go
proxy/: proxy.go  proxy_test.go
schema/: apiProvider.go  apiProvider_test.go  connectionStatsContainer.go  connectionStatsContainer_test.go  connectionStatusContainer_test.go  costCounter.go  costCounter_test.go  logDumpContainer.go  logDumpContainer_test.go  proxyRequest.go  proxyRequest_test.go  proxyResponse.go  proxyResponse_test.go  trafficObject.go  trafficObject_test.go
version/: version.go  version_test.go
(+127 files in other folders)
